# HistoQC

./: .gitignore  Readme.md  requirements.s3.txt  requirements.txt  setup.cfg
histoqc/: BaseImage.py  BasicModule.py  __main__.py  _pipeline.py  _worker.py
histoqc/tests/: conftest.py  test_api.py
histoqc/ui/: __init__.py
histoqc/ui/UserInterface/css/: index.css
histoqc/ui/UserInterface/scripts/: data_load.js  index.js
